# ai-engineering-pilot

./: .gitignore  ABOUT.md  README.md  logger_config.py  ollama_test.py  openai_test.py  perf_report.json  pyproject.toml
crew-ai/: README.md  crew.py  run_demo.py  streamlit_app.py  tools.py
module-1-semantic-router/: module-1-semantic-router.ipynb  router.py  router2.ipynb  router2.py  streamlit_app.py  streamlit_app2.py
module-10-snapaudit-capstone/: README.md  capstone_core.py  capstone_core2.py  module-10-snapaudit-capstone.ipynb  snapaudit-capstone2.ipynb  streamlit_app.py  streamlit_app2.py  test_capstone_ocr.py  test_realistic_ocr.py
module-11-crew-ai/: README2.md  __init__.py  agents.py  run_demo.ipynb  test_integration.py
module-2-structured-generation/: module-2-structured-generation.ipynb  receipt_extractor.py  receipt_extractor2.py  streamlit_app.py  test_vision.py
module-3-rag-systems/: generate_policy_pdf.py  module-3-rag-systems.ipynb  rag-systems2.ipynb  streamlit_app.py  streamlit_app2.py
module-4-agentic-workflows/: module-4-agentic-workflows.ipynb  streamlit_app.py  test_graph.py
module-5-model-context-protocol/: mcp_secure_adapter.py  module-5-model-context-protocol.ipynb  streamlit_app.py
module-6-ai-gateways/: README.md  ai_gateway_core.py  gateway_config.yaml  module-6-ai-gateways.ipynb  streamlit_app.py
module-7-evalops-and-telemetry/: README.md  eval.py  eval_results.json  eval_results_baseline.json  evalops_core.py  module-7-evalops-and-telemetry.ipynb  streamlit_app.py  telemetry_log.json  telemetry_regressed.json
(+11 files in other folders)
