[project]
name = "ai-engineering-fellowship"
version = "0.1.0"
description = "AI Engineering Fellowship"
requires-python = ">=3.13"
dependencies = [
    "langchain-core",
    "langgraph",
    "openai",
    "python-dotenv",
    "requests",
    "rank-bm25",
    "pypdf",
    "jupyter",
    "reportlab",
    "qdrant-client",
    "networkx",
    "streamlit",
    "ollama",
]
